# agentic_track

1_foundations/: myapp.py  mylab1.ipynb  mylab2.ipynb  mylab3.ipynb  mylab4.ipynb
2_openai/: mylab1.ipynb  mylab2.ipynb  mylab3.ipynb  mylab4.ipynb
2_openai/my_deepResearch/: deep_research.py  email_agent.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
3_crew/coder_new/: README.md  pyproject.toml
3_crew/coder_new/output/: code_and_output.txt
3_crew/coder_new/src/coder_new/: crew.py  main.py
3_crew/debate_new/: README.md  pyproject.toml
3_crew/debate_new/output/: decide.md  oppose.md  propose.md
3_crew/debate_new/src/debate_new/: crew.py  main.py
3_crew/debate_new/src/debate_new/config/: agents.yaml  tasks.yaml
3_crew/eng_team_new/: README.md  pyproject.toml
3_crew/eng_team_new/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/eng_team_new/src/eng_team_new/: crew.py  main.py
3_crew/eng_team_new/src/eng_team_new/config/: agents.yaml
3_crew/fin_researcher_new/: README.md  pyproject.toml  report.md
3_crew/fin_researcher_new/src/fin_researcher_new/: crew.py  main.py
3_crew/fin_researcher_new/src/fin_researcher_new/config/: agents.yaml
3_crew/stock_picker_new/: README.md  pyproject.toml
3_crew/stock_picker_new/memory/: chroma.sqlite3  lt_memory_storage.db
3_crew/stock_picker_new/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_new/src/stock_picker_new/: crew.py  main.py
3_crew/stock_picker_new/src/stock_picker_new/config/: agents.yaml
3_crew/stock_picker_new/src/stock_picker_new/tools/: push_tool.py
4_langgraph/: memory.db-shm  memory.db-wal  my_app.py  my_sidekick.py  my_sidekick_tools.py  mylab1.ipynb  mylab2.ipynb  mylab3.ipynb  mylab4.ipynb
4_langgraph/sandbox/: dinner.md
