[project]
name = "coder_new"
version = "0.1.0"
description = "coder_new using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
coder_new = "coder_new.main:run"
run_crew = "coder_new.main:run"
train = "coder_new.main:train"
replay = "coder_new.main:replay"
test = "coder_new.main:test"
run_with_trigger = "coder_new.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
