[project]
name = "debate_new"
version = "0.1.0"
description = "debate_new using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.1",
    "fastapi>=0.125.0",
    "litellm>=1.75.3",
]

[project.scripts]
debate_new = "debate_new.main:run"
run_crew = "debate_new.main:run"
train = "debate_new.main:train"
replay = "debate_new.main:replay"
test = "debate_new.main:test"
run_with_trigger = "debate_new.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
