[project]
name = "fin_researcher_new"
version = "0.1.0"
description = "fin_researcher_new using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.1",
    "litellm>=1.75.3",
]

[project.scripts]
fin_researcher_new = "fin_researcher_new.main:run"
run_crew = "fin_researcher_new.main:run"
train = "fin_researcher_new.main:train"
replay = "fin_researcher_new.main:replay"
test = "fin_researcher_new.main:test"
run_with_trigger = "fin_researcher_new.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
